# linux-sna

./: AUTHORS  BUGS  COPYING  ChangeLog  CommandTests  FEATURES  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  autogen.sh  chgver.sh  config.make.in  configure  configure.ac  configure.in  isapplied  mkinstalldirs  rules.make
acopy/: Makefile.in
aftp/: Makefile.in
aftpd/: Makefile.in
aname/: Makefile.in
anamed/: Makefile.in  anamed.c
aping/: BUILD.BAT  Makefile.in  aping.c  aping.h  apingd.c  cpicsession.h
arexec/: Makefile.in
asuite/: Makefile.am  Makefile.in  acopy.8  acopy.c  acopy.h  aftp.8  aftp.c  aftp.h  aftpd.8  aftpd.c  aftpd.h  aname.8  anamed.c  anamed.h  aping.8  aping.c  aping.h  apingd.c  arexec.8  arexec.c  arexec.h  arexecd.c  atell.c  atell.h  atelld.c  atest.c  configure  configure.in
atell/: BUILD.BAT  Makefile.in  atell.c  atell.h  atelld.c  cpicsession.c
docs/: Makefile.am  Makefile.in  linux-sna.spec  modules.conf.sna  sna.xml  snatchd.init  tn3270d.init  tn5250d.init
docs/arch-notes/: CommandTests  asuite.txt  features.txt  flows.txt  last-hand-patch.txt
docs/arch-notes/CVS/: Entries  Repository
docs/confs/: Makefile  README  network  sna.cfg  sna.xml  snatch  snatchd.conf
docs/confs/CVS/: Entries  Repository  Root
docs/history/: llcping.txt
docs/html-guides/: begin_snaconfig.html  get_started.html  quick-appendix-a.html  quick-node-setup.html  quick-sna.html  verify-sna-configure.html  verify-sna.html
docs/html-guides/CVS/: Entries  Repository
docs/scripts/: start.sh  stop.sh
docs/scripts/CVS/: Entries  Repository  Root
docs/tidbits/: hello.acg  hello.c  hellod.c
docs/tidbits/CVS/: Entries  Repository
docs/tidbits/hello/: Makefile  hello  hellod
docs/tidbits/hello/CVS/: Entries  Repository
etc.sample/: snatchd.conf
headers/: Makefile.in  config.h  config.h.in
include/: Makefile.am  Makefile.in  aname.h  config.h.in  cpic.h  lua.h  nof.h  syscall_pic.h  version.h
include/linux/: appc.h  attach.h  cpic.h  sna.h
include/tn5250/: config.h
include/tn5250/CVS/: Entries  Repository
kernel/: Makefile  af_sna.c  appc.h  attach.h  cpic.h  net_cpic.h  sna.h  sna_appc.c  sna_asm.c  sna_attach.c  sna_cbs.h  sna_common.h  sna_cosm.c  sna_cpic.c  sna_cs.c  sna_dfc.c  sna_dlc.c  sna_ds.c  sna_ebcdic.c  sna_errors.h  sna_externs.h  sna_formats.h  sna_hsr.c  sna_isr.c  sna_ms.c  sna_ms_vectors.h  sna_nof.c  sna_pc.c  sna_ps_conv.c  sna_ps_copr.c  sna_ps_main.c  sna_ps_mc.c  sna_ps_sync.c  sna_rm.c  sna_rss.c  sna_sm.c  sna_ss.c  sna_tc.c  sna_tdm.c  sna_trs.c  (+3 more)
libaftp/: Makefile.in
libappc/: Makefile.in  libappc.c
libasuite/: Makefile.am  Makefile.in  anameapi.h  appfftp.h  asuitecommon.c  asuitecommon.h  configure  configure.in  cpicsession.c  cpicsession.h  filemode.c  libaftp.c  libaftp.h  libaname.c  libaname.h  port.h  tdb.c  tdb.h  util.c  util.h  wildcard.c  wildcard.h
libcpic/: Makefile.in  libcpic.c
liblar/: Makefile.in  liblar.c
libnof/: Makefile.in  libnof.c
libsna/: Makefile.am  Makefile.in  appc.h  attach.h  configure  configure.in  cpic.h  lar.h  libappc.c  libattach.c  libcpic.c  liblar.c  liblua.c  libnof.c  lua.h  nof.h
libtnX/: Makefile.am  Makefile.in  libtnX.c  libtnX.h  tnX_buffer.c  tnX_conf.c  tnX_log.c  tnX_record.c  tnX_stream.c  transmaps  transmaps.h
llcping/: Makefile.am  Makefile.in  configure  configure.in  llcping.8  llcping.c
mksense/: Makefile.am  Makefile.in  mksense.c
patch-o-matic/: NEWPATCHES  net-fun.patch  net-fun.patch.help  runme
patch-o-matic/CVS/: Entries  Repository
sense/: Makefile.am  Makefile.in  README  SenseError-1.0.txt  aclocal.m4  configure  configure.in  getsense.c  mksense.c  sense.c  sense.data  sense.h
snaconfig/: Makefile.am  Makefile.in  configure  configure.in  display.c  load.c  parse.c  parse_file.c  parse_stdin.c  paths.h  sna.conf.5  sna_ctrl.c  sna_find.c  sna_list.c  sna_list.h  sna_load.c  sna_show.c  sna_utility.c  sna_xwords.c  sna_xwords.h  snaconfig.8  snaconfig.c  snaconfig.h  start.sh  stop.sh  utility.c
snatchd/: Makefile.am  Makefile.in  README  attach.h  configure  configure.in  parsecfg.c  parsecfg.h  pathnames.h  signal.c  snatch_list.c  snatch_list.h  snatch_xml.c  snatch_xwords.c  snatch_xwords.h  snatchd.c  snatchd.h  util.c  util.h
tn3270d/: Makefile.am  Makefile.in  codes3270.h  configure  configure.in  host3270.c  host3270.h  tn3270.h  tn3270_codes.h  tn3270_daemon.c  tn3270_host.c  tn3270_host.h  tn3270_list.c  tn3270_list.h  tn3270_xml.c  tn3270_xwords.c  tn3270_xwords.h  tn3270d.c  tn3270d.h
tn5250d/: Makefile.am  Makefile.in  configure  configure.in  host5250.c  host5250.h  tn5250d.c
