dnl Process this file with autoconf to produce a configure script.
AC_INIT(ltmain.sh)
AM_INIT_AUTOMAKE(linux-sna, 1.00pre16)
AM_CONFIG_HEADER(include/config.h)

CFLAGS="-Wall"

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LD
AC_SUBST(LD)
AC_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h unistd.h fcntl.h sys/file.h sys/ioctl.h sys/time.h \
		syslog.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.

AC_TYPE_GETGROUPS
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(gettimeofday socket strerror strtoul)

AC_CONFIG_SUBDIRS(libsna snaconfig snatchd llcping sense \
	libasuite asuite tn3270d tn5250d)

AC_CHECK_LIB(dl, main)
AC_OUTPUT(Makefile include/Makefile docs/Makefile)
