dnl Process this file with autoconf to produce a configure script.
AC_INIT(ltmain.sh)
AM_INIT_AUTOMAKE(linux-sna, 0.1.28)
AM_CONFIG_HEADER(include/config.h)

CFLAGS="-Wall"

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LD
AC_SUBST(LD)
AC_EXEEXT
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(strings.h unistd.h fcntl.h sys/file.h sys/ioctl.h sys/time.h \
		syslog.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Check for XML libraries.
AC_PATH_PROG(XML_CONFIG, xml-config, no)
if test x$XML_CONFIG = xno ; then
	AC_MSG_WARN(** Can't find xml-config.  Is libxml or libxml-devel rpm installed? **)
        AC_MSG_ERROR(** libxml-devel is available via ftp from your linux distro or ftp.ximian.com **)
fi
AC_MSG_CHECKING(for xml C flags)
XML_CFLAGS="`$XML_CONFIG --cflags`"
CFLAGS="$CFLAGS $XML_CFLAGS"
AC_MSG_RESULT($XML_CFLAGS)
AC_MSG_CHECKING(for xml libs)
XML_LIBS="`$XML_CONFIG --libs`"
LIBS="$LIBS $XML_LIBS"
AC_MSG_RESULT($XML_LIBS)

dnl *
dnl * Not using gnome, so look for glib and GTK+ instead.
dnl *
AC_PATH_PROG(GLIB_CONFIG,glib-config,no)
if test x$GLIB_CONFIG = xno ; then
        AC_MSG_ERROR(** Can't find glib-config.  Is glib installed? **)
fi
AC_MSG_CHECKING(for glib C flags)
GLIB_CFLAGS="`$GLIB_CONFIG --cflags glib`"
CFLAGS="$CFLAGS $GLIB_CFLAGS"
AC_MSG_RESULT($GLIB_CFLAGS)
AC_MSG_CHECKING(for glib libs)
GLIB_LIBS="`$GLIB_CONFIG --libs glib`"
LIBS="$LIBS $GLIB_LIBS"
AC_MSG_RESULT($GLIB_LIBS)

dnl Checks for library functions.

AC_TYPE_GETGROUPS
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(gettimeofday socket strerror strtoul)

AC_CHECK_LIB(dl, main)
AC_OUTPUT(Makefile include/Makefile docs/Makefile libsna/Makefile \
	snaconfig/Makefile snatchd/Makefile sense/Makefile libasuite/Makefile \
	asuite/Makefile libtnX/Makefile tn3270d/Makefile)
