dnl Process this file with autoconf to create configure.

AC_INIT(aping.c)
AM_INIT_AUTOMAKE(asuite, 1.00PRE18)

AC_PROG_CC
AC_EXEEXT
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Checks for library functions.
dnl Check for glib
AC_PATH_PROG(GLIB_CONFIG,glib-config,no)
if test x$GLIB_CONFIG = xno ; then
   AC_MSG_ERROR(** Can't find glib-config.  Is glib installed? **)
fi
AC_MSG_CHECKING(for glib C flags)
GLIB_CFLAGS="`$GLIB_CONFIG --cflags glib`"
CFLAGS="$CFLAGS $GLIB_CFLAGS"
AC_MSG_RESULT($GLIB_CFLAGS)
AC_MSG_CHECKING(for glib libs)
GLIB_LIBS="`$GLIB_CONFIG --libs glib`"
LIBS="$LIBS $GLIB_LIBS"
AC_MSG_RESULT($GLIB_LIBS)

dnl Output the makefile
AC_OUTPUT(Makefile)
