dnl Process this file with autoconf to create configure.

AC_INIT(snatchd.c)
AM_INIT_AUTOMAKE(snatchd, 0.1.21)

AC_PROG_CC
AC_EXEEXT
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

dnl Check for XML libraries.
AC_PATH_PROG(XML_CONFIG, xml-config, no)
if test x$XML_CONFIG = xno ; then
        AC_MSG_ERROR(** Can't find xml-config.  Is libxml installed? **)
fi
AC_MSG_CHECKING(for xml C flags)
XML_CFLAGS="`$XML_CONFIG --cflags`"
CFLAGS="$CFLAGS $XML_CFLAGS"
AC_MSG_RESULT($XML_CFLAGS)
AC_MSG_CHECKING(for xml libs)
XML_LIBS="`$XML_CONFIG --libs`"
LIBS="$LIBS $XML_LIBS"
AC_MSG_RESULT($XML_LIBS)

dnl Output the makefile
AC_OUTPUT(Makefile)
